RESOLVED FIXED93490
Oscillator node should throw exception if type is assigned an invalid value
https://bugs.webkit.org/show_bug.cgi?id=93490
Summary Oscillator node should throw exception if type is assigned an invalid value
Raymond Toy
Reported 2012-08-08 09:23:42 PDT
If an Oscillator node is given an invalid value, nothing is changed, and the previously set type (or the default) is used for generating audio. It would probably be better to signal an exception in this case.
Attachments
Patch (6.74 KB, patch)
2012-08-09 09:34 PDT, Raymond Toy
no flags
Patch (6.77 KB, patch)
2012-08-13 11:03 PDT, Raymond Toy
no flags
Raymond Toy
Comment 1 2012-08-08 16:21:41 PDT
Add dependency on 93194 so that we get tests infrastructure to add tests for this.
Raymond Toy
Comment 2 2012-08-09 09:34:08 PDT
WebKit Review Bot
Comment 3 2012-08-09 13:09:15 PDT
Comment on attachment 157470 [details] Patch Rejecting attachment 157470 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: CT (content): Merge conflict in LayoutTests/ChangeLog Failed to merge in the changes. Patch failed at 0001 (r125185) http/tests/images/jpg-img-partial-load.html timeout on Lion When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/13459674
Raymond Toy
Comment 4 2012-08-09 13:34:52 PDT
Comment on attachment 157470 [details] Patch I just checked and my current tree has the most recent webkit roll. Can we try committing again?
Raymond Toy
Comment 5 2012-08-13 11:03:11 PDT
Raymond Toy
Comment 6 2012-08-13 11:03:50 PDT
(In reply to comment #5) > Created an attachment (id=158045) [details] > Patch Patch regenerated from latest sources.
WebKit Review Bot
Comment 7 2012-08-13 15:16:53 PDT
Comment on attachment 158045 [details] Patch Clearing flags on attachment: 158045 Committed r125460: <http://trac.webkit.org/changeset/125460>
WebKit Review Bot
Comment 8 2012-08-13 15:16:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.