Oscillator node should throw exception if type is assigned an invalid value https://bugs.webkit.org/show_bug.cgi?id=93490

Patch by Raymond Toy <rtoy@google.com> on 2012-08-13
Reviewed by Chris Rogers.

Source/WebCore:

New tests added to oscillator-basic to catch exceptions.

* Modules/webaudio/Oscillator.cpp:
(WebCore::Oscillator::Oscillator):
(WebCore::Oscillator::setType): Return exception
* Modules/webaudio/Oscillator.h:
(Oscillator): Update setType declaration
* Modules/webaudio/Oscillator.idl: setType can raise exception.

LayoutTests:

Add tests for invalid oscillator types.

* webaudio/oscillator-basic-expected.txt: Updated
* webaudio/oscillator-basic.html: Test CUSTOM and invalid
oscillator type.

Canonical link: https://commits.webkit.org/111731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125460 268f45cc-cd09-0410-ab3c-d52691b4dbfc