Source/WebCore/Modules/webaudio/Oscillator.h
@@ -61,7 +61,7 @@ public:
     virtual void reset();
 
     unsigned short type() const { return m_type; }
-    void setType(unsigned short);
+    void setType(unsigned short, ExceptionCode&);
 
     AudioParam* frequency() { return m_frequency.get(); }
     AudioParam* detune() { return m_detune.get(); }
